--- a/src/app/trainging/new-trainging/new-trainging.component.html
+++ b/src/app/trainging/new-trainging/new-trainging.component.html
@@ -1,10 +1,11 @@
 <section class="new-training" fxLayout fxLayoutAlign="center">
+    <form (ngSubmit)="onStartTraining(f)" #f="ngForm" required >
     <mat-card fxFlex="400px" fxFlex.xs="100%">
         <mat-card-title fxLayoutAlign="center" >Time to start a workout!</mat-card-title>
         <mat-card-content fxLayoutAlign="center">
             <mat-form-field>
                 <mat-label>Select Training</mat-label>
-                <mat-select>
+                <mat-select ngModel name="exercise">
                   <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
                     {{ exercise.name }}
                   </mat-option>
@@ -12,7 +13,8 @@
             </mat-form-field>
         </mat-card-content>
         <mat-card-actions fxLayoutAlign="center">
-            <button color="primary" type="submit" mat-raised-button (click)="onStartTraining()">Start</button>
+            <button color="primary" type="submit" mat-raised-button [disabled]="f.invalid">Start</button>
         </mat-card-actions>
     </mat-card>
+    </form>
 </section>
